--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body class="container">
+  <div class="wrapper">
+    <div class="wrapper__game"></div>
+    <div class="wrapper__table"></div>
+  </div>
   <script src="script/script.js"></script>
 </body>
 
