--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="wrapper__game"></div>
     <div class="wrapper__table"></div>
   </div>
+  <!-- <canvas id="field"></canvas> -->
   <script src="script/script.js"></script>
 </body>
 
